feat: stream svc
